# larimar

./: .dockerignore  .gitignore  .htaccess  321.txt  Pipfile  ReadMe.MD  ReadMe.rst  datadump.json  datadump.xml  datadumpadmin.json  db.sqlite3  loaddata_json  manage.py  projects_dict_projectstatus.json  pyproject.toml  requirements.txt  requirements.~xt  ttt.txt
accounts/: forms.py  middleware.py  models.py  tables.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200323_1457.py  0003_auto_20200323_1740.py  0004_auto_20200418_1713.py  0005_auto_20200418_1828.py  0006_auto_20210707_1136.py  0007_userprofile_lang.py  0008_alter_userprofile_lang.py  0009_userprofile_is_del.py  0010_remove_userprofile_is_del_alter_userprofile_lang.py  0011_alter_userprofile_description.py
accounts/templates/: login_base.html  userprofile_detail.html
chats/: apps.py  apps~.py  channels.py  consumers.py  models.py  routing.py  signals.py  urls.py  views.py
chats/fixtures/: chats_dict_chattype.json
chats/migrations/: 0001_initial.py  0002_chatmember_dateonline.py  0003_chatmember_is_admin.py  0004_auto_20220131_1402.py  0005_auto_20220203_1253.py  0006_chatmember_dateoffline.py  0007_auto_20220414_1430.py  0008_remove_dict_chattype_name_dict_chattype_name_en_and_more.py  0009_remove_dict_chattype_name_lang.py  0010_alter_dict_chattype_options_and_more.py  0011_alter_dict_chattype_options.py  0012_alter_message_text.py
chats/templates/: chat_member_form.html  chat_members_list.html  chat_message_form.html  chat_messages_members.html  chat_ws.html  chats.html  chats_list.html
companies/: forms.py  models.py  urls.py  views.py
companies/fixtures/: companies_data_init.json  companies_dict_companystructuretype.json  companies_dict_companytype.json  companies_dict_contentplace.json  companies_dict_contenttype.json  companies_dict_positiontype.json
companies/migrations/: 0001_initial.py  0002_usercompany.py  0003_auto_20200314_1734.py  0004_auto_20200318_1940.py  0005_auto_20200321_1945.py  0006_content_dict_contenttype.py  0007_auto_20200406_2132.py  0008_content_announcement.py  0009_auto_20200408_1912.py  0010_auto_20200409_2019.py  0011_auto_20200410_1904.py  0012_content_is_public.py  0013_dict_contentplace.py  0014_content_place.py  0015_auto_20200506_1914.py  0016_company_currency.py  0017_dict_positiontype_staff.py  0018_auto_20200618_1826.py  0019_auto_20200618_1845.py  0020_staff.py  0021_auto_20200708_1626.py  0022_auto_20200708_1627.py  0029_resume.py  (+23 more)
crm/: forms.py  models.py  tables.py  urls.py  views.py
dashboard/: urls.py  utils.py  views.py
docs/: forms.py  models.py  urls.py  views.py
feedback/: forms.py  models.py  request_exposer.py  serializers.py  urls.py  views.py
files/: forms.py  models.py  urls.py  views.py
finance/: models.py  request_exposer.py  translation.py  urls.py  views.py
financies/: models.py  urls.py
larimar/: asgi.py  initial_data.yaml  routing~.py  settings.py  urls.py  wsgi.py
lists/: forms.py  models.py  urls.py  views.py
main/: consumers.py  main_menuitem.sql  models.py  request_exposer.py  routing.py  urls.py  utils.py  utils_color.py  utils_lang.py  utils_model.py  views.py
projects/: admin.py  ajax.py  forms.py  models.py  tables.py  tables_old.py  urls.py  utils.py  views.py  widgets.py
sql/: db_sqlite3.sql
templates/: base.html  base_old.html  chat_member_form.html  chat_members_list.html  chat_message_form.html  chat_messages_list.html  chat_messages_members.html  chat_ws.html  chats.html  chats_list.html  client_detail.html  client_history.html  clientevent_detail.html  clientevent_history.html  clientevents_list.html  clients_list.html  clienttask_detail.html  clienttask_history.html  clienttasks_list.html  companies.html  company_detail.html  company_page.html  company_user_detail.html  company_user_roles_list.html  company_users_list.html  content.html  content_detail.html  doc_detail.html  doc_history.html  docs_list.html  doctask_detail.html  doctasks_list.html  feedbacksystemdev_detail.html  feedbacktask_detail.html  feedbacktaskcomments_list.html  feedbacktasks_list.html  feedbackticket_detail.html  feedbackticketcomments_list.html  feedbacktickets_list.html  feedbackticketsdev_list.html  (+43 more)
(+397 files in other folders)
